BecasApp/BecasParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from BecasParser.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class BecasParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		START=1, END=2, VAR=3, LOOP=4, IN=5, RANGE=6, CHECK=7, IF=8, SO=9, ELSEIF=10, 
		ELSE=11, END_CHECK=12, END_LOOP=13, OUT=14, INPUT=15, OP_ASIG=16, OP_ARIT=17, 
		OP_REL=18, OP_OR=19, OP_AND=20, OP_NOT=21, PARENT_I=22, PARENT_D=23, COLON=24, 
		COMMA=25, ID=26, INT=27, FLOAT=28, STRING=29, COMMENT=30, WS=31;
	public const int
		RULE_start_rule = 0, RULE_instrucciones = 1, RULE_instruccion = 2, RULE_var_decl = 3, 
		RULE_input_datos = 4, RULE_input_usuario = 5, RULE_asignacion_suma = 6, 
		RULE_ciclo_loop = 7, RULE_check_block = 8, RULE_elseif_bloque = 9, RULE_else_bloque = 10, 
		RULE_condicion = 11, RULE_or_cond = 12, RULE_and_cond = 13, RULE_not_cond = 14, 
		RULE_comparacion = 15, RULE_exp = 16, RULE_numero = 17, RULE_valor_salida = 18, 
		RULE_salida = 19;
	public static readonly string[] ruleNames = {
		"start_rule", "instrucciones", "instruccion", "var_decl", "input_datos", 
		"input_usuario", "asignacion_suma", "ciclo_loop", "check_block", "elseif_bloque", 
		"else_bloque", "condicion", "or_cond", "and_cond", "not_cond", "comparacion", 
		"exp", "numero", "valor_salida", "salida"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'END'", "'VAR'", "'LOOP'", "'IN'", "'range'", "'CHECK'", 
		"'IF'", "'SO'", "'ELSEIF'", "'ELSE'", "'END_CHECK'", "'END_LOOP'", "'OUT'", 
		"'INPUT'", "'='", "'+'", null, null, "'&&'", "'!'", "'('", "')'", "':'", 
		"','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "START", "END", "VAR", "LOOP", "IN", "RANGE", "CHECK", "IF", "SO", 
		"ELSEIF", "ELSE", "END_CHECK", "END_LOOP", "OUT", "INPUT", "OP_ASIG", 
		"OP_ARIT", "OP_REL", "OP_OR", "OP_AND", "OP_NOT", "PARENT_I", "PARENT_D", 
		"COLON", "COMMA", "ID", "INT", "FLOAT", "STRING", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "BecasParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static BecasParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public BecasParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public BecasParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Start_ruleContext : ParserRuleContext {
		public ITerminalNode START() { return GetToken(BecasParser.START, 0); }
		public InstruccionesContext instrucciones() {
			return GetRuleContext<InstruccionesContext>(0);
		}
		public ITerminalNode END() { return GetToken(BecasParser.END, 0); }
		public Start_ruleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_rule; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterStart_rule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitStart_rule(this);
		}
	}

	[RuleVersion(0)]
	public Start_ruleContext start_rule() {
		Start_ruleContext _localctx = new Start_ruleContext(Context, State);
		EnterRule(_localctx, 0, RULE_start_rule);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; Match(START);
			State = 41; instrucciones();
			State = 42; Match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstruccionesContext : ParserRuleContext {
		public InstruccionContext[] instruccion() {
			return GetRuleContexts<InstruccionContext>();
		}
		public InstruccionContext instruccion(int i) {
			return GetRuleContext<InstruccionContext>(i);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instrucciones; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterInstrucciones(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitInstrucciones(this);
		}
	}

	[RuleVersion(0)]
	public InstruccionesContext instrucciones() {
		InstruccionesContext _localctx = new InstruccionesContext(Context, State);
		EnterRule(_localctx, 2, RULE_instrucciones);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VAR) | (1L << LOOP) | (1L << CHECK) | (1L << OUT) | (1L << INPUT) | (1L << ID))) != 0)) {
				{
				{
				State = 44; instruccion();
				}
				}
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstruccionContext : ParserRuleContext {
		public Var_declContext var_decl() {
			return GetRuleContext<Var_declContext>(0);
		}
		public Input_datosContext input_datos() {
			return GetRuleContext<Input_datosContext>(0);
		}
		public Input_usuarioContext input_usuario() {
			return GetRuleContext<Input_usuarioContext>(0);
		}
		public Ciclo_loopContext ciclo_loop() {
			return GetRuleContext<Ciclo_loopContext>(0);
		}
		public Check_blockContext check_block() {
			return GetRuleContext<Check_blockContext>(0);
		}
		public SalidaContext salida() {
			return GetRuleContext<SalidaContext>(0);
		}
		public Asignacion_sumaContext asignacion_suma() {
			return GetRuleContext<Asignacion_sumaContext>(0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterInstruccion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitInstruccion(this);
		}
	}

	[RuleVersion(0)]
	public InstruccionContext instruccion() {
		InstruccionContext _localctx = new InstruccionContext(Context, State);
		EnterRule(_localctx, 4, RULE_instruccion);
		try {
			State = 57;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 50; var_decl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 51; input_datos();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 52; input_usuario();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 53; ciclo_loop();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 54; check_block();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 55; salida();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 56; asignacion_suma();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Var_declContext : ParserRuleContext {
		public ITerminalNode VAR() { return GetToken(BecasParser.VAR, 0); }
		public ITerminalNode[] ID() { return GetTokens(BecasParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(BecasParser.ID, i);
		}
		public ITerminalNode OP_ASIG() { return GetToken(BecasParser.OP_ASIG, 0); }
		public NumeroContext numero() {
			return GetRuleContext<NumeroContext>(0);
		}
		public ITerminalNode[] COMMA() { return GetTokens(BecasParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(BecasParser.COMMA, i);
		}
		public Var_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_var_decl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterVar_decl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitVar_decl(this);
		}
	}

	[RuleVersion(0)]
	public Var_declContext var_decl() {
		Var_declContext _localctx = new Var_declContext(Context, State);
		EnterRule(_localctx, 6, RULE_var_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 59; Match(VAR);
			State = 60; Match(ID);
			State = 65;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 61; Match(COMMA);
				State = 62; Match(ID);
				}
				}
				State = 67;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 68; Match(OP_ASIG);
			State = 69; numero();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Input_datosContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(BecasParser.ID, 0); }
		public ITerminalNode OP_ASIG() { return GetToken(BecasParser.OP_ASIG, 0); }
		public NumeroContext numero() {
			return GetRuleContext<NumeroContext>(0);
		}
		public Input_datosContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_input_datos; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterInput_datos(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitInput_datos(this);
		}
	}

	[RuleVersion(0)]
	public Input_datosContext input_datos() {
		Input_datosContext _localctx = new Input_datosContext(Context, State);
		EnterRule(_localctx, 8, RULE_input_datos);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71; Match(ID);
			State = 72; Match(OP_ASIG);
			State = 73; numero();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Input_usuarioContext : ParserRuleContext {
		public ITerminalNode INPUT() { return GetToken(BecasParser.INPUT, 0); }
		public ITerminalNode STRING() { return GetToken(BecasParser.STRING, 0); }
		public ITerminalNode ID() { return GetToken(BecasParser.ID, 0); }
		public Input_usuarioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_input_usuario; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterInput_usuario(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitInput_usuario(this);
		}
	}

	[RuleVersion(0)]
	public Input_usuarioContext input_usuario() {
		Input_usuarioContext _localctx = new Input_usuarioContext(Context, State);
		EnterRule(_localctx, 10, RULE_input_usuario);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; Match(INPUT);
			State = 76; Match(STRING);
			State = 77; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Asignacion_sumaContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(BecasParser.ID, 0); }
		public ITerminalNode OP_ASIG() { return GetToken(BecasParser.OP_ASIG, 0); }
		public ExpContext[] exp() {
			return GetRuleContexts<ExpContext>();
		}
		public ExpContext exp(int i) {
			return GetRuleContext<ExpContext>(i);
		}
		public ITerminalNode OP_ARIT() { return GetToken(BecasParser.OP_ARIT, 0); }
		public Asignacion_sumaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_asignacion_suma; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterAsignacion_suma(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitAsignacion_suma(this);
		}
	}

	[RuleVersion(0)]
	public Asignacion_sumaContext asignacion_suma() {
		Asignacion_sumaContext _localctx = new Asignacion_sumaContext(Context, State);
		EnterRule(_localctx, 12, RULE_asignacion_suma);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79; Match(ID);
			State = 80; Match(OP_ASIG);
			State = 81; exp();
			State = 82; Match(OP_ARIT);
			State = 83; exp();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Ciclo_loopContext : ParserRuleContext {
		public ITerminalNode LOOP() { return GetToken(BecasParser.LOOP, 0); }
		public ITerminalNode ID() { return GetToken(BecasParser.ID, 0); }
		public ITerminalNode IN() { return GetToken(BecasParser.IN, 0); }
		public ITerminalNode RANGE() { return GetToken(BecasParser.RANGE, 0); }
		public ITerminalNode PARENT_I() { return GetToken(BecasParser.PARENT_I, 0); }
		public ITerminalNode INT() { return GetToken(BecasParser.INT, 0); }
		public ITerminalNode PARENT_D() { return GetToken(BecasParser.PARENT_D, 0); }
		public ITerminalNode COLON() { return GetToken(BecasParser.COLON, 0); }
		public InstruccionesContext instrucciones() {
			return GetRuleContext<InstruccionesContext>(0);
		}
		public ITerminalNode END_LOOP() { return GetToken(BecasParser.END_LOOP, 0); }
		public Ciclo_loopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ciclo_loop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterCiclo_loop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitCiclo_loop(this);
		}
	}

	[RuleVersion(0)]
	public Ciclo_loopContext ciclo_loop() {
		Ciclo_loopContext _localctx = new Ciclo_loopContext(Context, State);
		EnterRule(_localctx, 14, RULE_ciclo_loop);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(LOOP);
			State = 86; Match(ID);
			State = 87; Match(IN);
			State = 88; Match(RANGE);
			State = 89; Match(PARENT_I);
			State = 90; Match(INT);
			State = 91; Match(PARENT_D);
			State = 92; Match(COLON);
			State = 93; instrucciones();
			State = 94; Match(END_LOOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Check_blockContext : ParserRuleContext {
		public ITerminalNode CHECK() { return GetToken(BecasParser.CHECK, 0); }
		public ITerminalNode[] COLON() { return GetTokens(BecasParser.COLON); }
		public ITerminalNode COLON(int i) {
			return GetToken(BecasParser.COLON, i);
		}
		public ITerminalNode IF() { return GetToken(BecasParser.IF, 0); }
		public ITerminalNode PARENT_I() { return GetToken(BecasParser.PARENT_I, 0); }
		public CondicionContext condicion() {
			return GetRuleContext<CondicionContext>(0);
		}
		public ITerminalNode PARENT_D() { return GetToken(BecasParser.PARENT_D, 0); }
		public ITerminalNode SO() { return GetToken(BecasParser.SO, 0); }
		public InstruccionesContext instrucciones() {
			return GetRuleContext<InstruccionesContext>(0);
		}
		public ITerminalNode END_CHECK() { return GetToken(BecasParser.END_CHECK, 0); }
		public Elseif_bloqueContext[] elseif_bloque() {
			return GetRuleContexts<Elseif_bloqueContext>();
		}
		public Elseif_bloqueContext elseif_bloque(int i) {
			return GetRuleContext<Elseif_bloqueContext>(i);
		}
		public Else_bloqueContext else_bloque() {
			return GetRuleContext<Else_bloqueContext>(0);
		}
		public Check_blockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_check_block; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterCheck_block(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitCheck_block(this);
		}
	}

	[RuleVersion(0)]
	public Check_blockContext check_block() {
		Check_blockContext _localctx = new Check_blockContext(Context, State);
		EnterRule(_localctx, 16, RULE_check_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; Match(CHECK);
			State = 97; Match(COLON);
			State = 98; Match(IF);
			State = 99; Match(PARENT_I);
			State = 100; condicion();
			State = 101; Match(PARENT_D);
			State = 102; Match(SO);
			State = 103; Match(COLON);
			State = 104; instrucciones();
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ELSEIF) {
				{
				{
				State = 105; elseif_bloque();
				}
				}
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ELSE) {
				{
				State = 111; else_bloque();
				}
			}

			State = 114; Match(END_CHECK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Elseif_bloqueContext : ParserRuleContext {
		public ITerminalNode ELSEIF() { return GetToken(BecasParser.ELSEIF, 0); }
		public ITerminalNode PARENT_I() { return GetToken(BecasParser.PARENT_I, 0); }
		public CondicionContext condicion() {
			return GetRuleContext<CondicionContext>(0);
		}
		public ITerminalNode PARENT_D() { return GetToken(BecasParser.PARENT_D, 0); }
		public ITerminalNode SO() { return GetToken(BecasParser.SO, 0); }
		public ITerminalNode COLON() { return GetToken(BecasParser.COLON, 0); }
		public InstruccionesContext instrucciones() {
			return GetRuleContext<InstruccionesContext>(0);
		}
		public Elseif_bloqueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseif_bloque; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterElseif_bloque(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitElseif_bloque(this);
		}
	}

	[RuleVersion(0)]
	public Elseif_bloqueContext elseif_bloque() {
		Elseif_bloqueContext _localctx = new Elseif_bloqueContext(Context, State);
		EnterRule(_localctx, 18, RULE_elseif_bloque);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; Match(ELSEIF);
			State = 117; Match(PARENT_I);
			State = 118; condicion();
			State = 119; Match(PARENT_D);
			State = 120; Match(SO);
			State = 121; Match(COLON);
			State = 122; instrucciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Else_bloqueContext : ParserRuleContext {
		public ITerminalNode ELSE() { return GetToken(BecasParser.ELSE, 0); }
		public ITerminalNode COLON() { return GetToken(BecasParser.COLON, 0); }
		public InstruccionesContext instrucciones() {
			return GetRuleContext<InstruccionesContext>(0);
		}
		public Else_bloqueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_else_bloque; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterElse_bloque(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitElse_bloque(this);
		}
	}

	[RuleVersion(0)]
	public Else_bloqueContext else_bloque() {
		Else_bloqueContext _localctx = new Else_bloqueContext(Context, State);
		EnterRule(_localctx, 20, RULE_else_bloque);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124; Match(ELSE);
			State = 125; Match(COLON);
			State = 126; instrucciones();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CondicionContext : ParserRuleContext {
		public Or_condContext or_cond() {
			return GetRuleContext<Or_condContext>(0);
		}
		public CondicionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_condicion; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterCondicion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitCondicion(this);
		}
	}

	[RuleVersion(0)]
	public CondicionContext condicion() {
		CondicionContext _localctx = new CondicionContext(Context, State);
		EnterRule(_localctx, 22, RULE_condicion);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128; or_cond();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Or_condContext : ParserRuleContext {
		public And_condContext[] and_cond() {
			return GetRuleContexts<And_condContext>();
		}
		public And_condContext and_cond(int i) {
			return GetRuleContext<And_condContext>(i);
		}
		public ITerminalNode[] OP_OR() { return GetTokens(BecasParser.OP_OR); }
		public ITerminalNode OP_OR(int i) {
			return GetToken(BecasParser.OP_OR, i);
		}
		public Or_condContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_or_cond; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterOr_cond(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitOr_cond(this);
		}
	}

	[RuleVersion(0)]
	public Or_condContext or_cond() {
		Or_condContext _localctx = new Or_condContext(Context, State);
		EnterRule(_localctx, 24, RULE_or_cond);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 130; and_cond();
			State = 135;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OP_OR) {
				{
				{
				State = 131; Match(OP_OR);
				State = 132; and_cond();
				}
				}
				State = 137;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class And_condContext : ParserRuleContext {
		public Not_condContext[] not_cond() {
			return GetRuleContexts<Not_condContext>();
		}
		public Not_condContext not_cond(int i) {
			return GetRuleContext<Not_condContext>(i);
		}
		public ITerminalNode[] OP_AND() { return GetTokens(BecasParser.OP_AND); }
		public ITerminalNode OP_AND(int i) {
			return GetToken(BecasParser.OP_AND, i);
		}
		public And_condContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_and_cond; } }
		public override void EnterRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.EnterAnd_cond(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IBecasParserListener typedListener = listener as IBecasParserListener;
			if (typedListener != null) typedListener.ExitAnd_cond(this);
		}
	}

	[RuleVersion(0)]
	public And_condContext and_cond() {
		And_condContext _localctx = new And_condContext(Context, State);
		EnterRule(_localctx, 26, RULE_and_cond);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; not_cond();
			State = 143;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OP_AND) {
				{
				{
				State = 139; Match(OP_AND);
				State = 140; not_cond();
				}
				}
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
